syntax = "proto3";

option java_package = "com.exemplo.sum";
option java_multiple_files = true;

message SumRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message SumResponse {
  int32 result = 1;
}

message PrimeNumberRequest {
  int32  number = 1;
}

message PrimeNumberResponse {
  int32 prime_factor = 1;
}

message AverageRequest {
  int32 number = 1;
}

message AverageResponse {
  int32 number = 1;
}

message MaximumRequest {
  int32 number = 1;
}

message MaximumResponse {
  int32 number = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double number = 1;
}

service SumService {
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc PrimeNumberDecomposition(PrimeNumberRequest) returns (stream PrimeNumberResponse) {};

  rpc Average(stream AverageRequest) returns (AverageResponse) {};

  rpc MaximumNumber(stream MaximumRequest) returns (stream MaximumResponse) {};

  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}